updated files for better production

--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Parshuram Singh - Portfolio</title>
     
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <!-- REMOVED: Google Fonts <link> tag to prevent render blocking -->
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet"> -->
 
+    <!-- IMPORTANT: Tailwind CSS is now handled via local installation (src/index.css) -->
+    <!-- Add meta description for SEO -->
+    <meta name="description" content="Parshuram Singh's professional portfolio showcasing software engineering, blockchain development, and frontend specialization projects.">
   </head>
   <body>
     <div id="root"></div>
