Add Open Graph meta tags and cover.webp for social previews

--- a/index.html
+++ b/index.html
@@ -1,18 +1,28 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Parshuram Singh - Portfolio</title>
-    
-    <!-- REMOVED: Google Fonts <link> tag to prevent render blocking -->
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet"> -->
+ <head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Parshuram Singh - Portfolio</title>
 
-    <!-- IMPORTANT: Tailwind CSS is now handled via local installation (src/index.css) -->
-    <!-- Add meta description for SEO -->
-    <meta name="description" content="Parshuram Singh's professional portfolio showcasing software engineering, blockchain development, and frontend specialization projects.">
-  </head>
+  <!-- 🔍 SEO Meta -->
+  <meta name="description" content="Parshuram Singh's professional portfolio showcasing software engineering, blockchain development, and frontend specialization projects.">
+
+  <!-- 🌐 Open Graph (for LinkedIn, Facebook, etc.) -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Parshuram Singh - Developer Portfolio" />
+  <meta property="og:description" content="Explore my projects in React, Tailwind CSS, Vite, and Blockchain." />
+  <meta property="og:image" content="https://my-portfolio-eta-nine-d8gvqtsq67.vercel.app/cover.webp" />
+  <meta property="og:url" content="https://my-portfolio-eta-nine-d8gvqtsq67.vercel.app/" />
+
+  <!-- 🐦 Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Parshuram Singh - Developer Portfolio" />
+  <meta name="twitter:description" content="Explore my projects in React, Tailwind CSS, Vite, and Blockchain." />
+  <meta name="twitter:image" content="https://my-portfolio-eta-nine-d8gvqtsq67.vercel.app/cover.webp" />
+</head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
