add author name to meta data

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
   <!-- 🔍 SEO Meta -->
   <meta name="description" content="Parshuram Singh's professional portfolio showcasing software engineering, blockchain development, and frontend specialization projects.">
+  <meta name="author" content="Parshuram Singh" />
+
 
   <!-- 🌐 Open Graph (for LinkedIn, Facebook, etc.) -->
   <meta property="og:type" content="website" />
