enhance index.html for seo

--- a/index.html
+++ b/index.html
@@ -7,22 +7,47 @@
   <title>Parshuram Singh - Portfolio</title>
 
   <!-- 🔍 SEO Meta -->
-  <meta name="description" content="Parshuram Singh's professional portfolio showcasing software engineering, blockchain development, and frontend specialization projects.">
-  <meta name="author" content="Parshuram Singh" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://https://my-portfolio-eta-nine-d8gvqtsq67.vercel.app" />
 
+  <title>Parshuram Singh – React & Hyperledger Developer</title>
+  <meta name="description" content="Parshuram Singh ‑ Software Engineer specialising in React, Tailwind, Vite & Hyperledger Fabric; explore full‑stack dApp projects." />
+  <meta name="author" content="Parshuram Singh" />
 
-  <!-- 🌐 Open Graph (for LinkedIn, Facebook, etc.) -->
+  <!-- Open Graph -->
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Parshuram Singh - Developer Portfolio" />
-  <meta property="og:description" content="Explore my projects in React, Tailwind CSS, Vite, and Blockchain." />
-  <meta property="og:image" content="https://my-portfolio-eta-nine-d8gvqtsq67.vercel.app/cover.webp" />
-  <meta property="og:url" content="https://my-portfolio-eta-nine-d8gvqtsq67.vercel.app/" />
+  <meta property="og:title" content="Parshuram Singh – Blockchain & Frontend Portfolio" />
+  <meta property="og:description" content="Explore my React, Tailwind CSS, Vite & Hyperledger Fabric dApp projects." />
+  <meta property="og:image" content="https://https://my-portfolio-eta-nine-d8gvqtsq67.vercel.app/cover.webp" />
+  <meta property="og:url" content="https://https://my-portfolio-eta-nine-d8gvqtsq67.vercel.app" />
 
-  <!-- 🐦 Twitter Card -->
+  <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Parshuram Singh - Developer Portfolio" />
-  <meta name="twitter:description" content="Explore my projects in React, Tailwind CSS, Vite, and Blockchain." />
-  <meta name="twitter:image" content="https://my-portfolio-eta-nine-d8gvqtsq67.vercel.app/cover.webp" />
+  <meta name="twitter:creator" content="@PSinghDev" />
+  <meta name="twitter:title" content="Parshuram Singh – Developer Portfolio" />
+  <meta name="twitter:description" content="Software Engineer (React & Blockchain) | Hyperledger Fabric Trade‑Finance dApp" />
+  <meta name="twitter:image" content="https://https://my-portfolio-eta-nine-d8gvqtsq67.vercel.app/cover.webp" />
+  <meta name="twitter:image:alt" content="Dashboard UI screenshot of Hyperledger Fabric trade‑finance dApp" />
+
+  <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+
+  <!-- Structured Data: define you as a Person (important for Search + Knowledge Panel) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Parshuram Singh",
+    "url": "https://https://my-portfolio-eta-nine-d8gvqtsq67.vercel.app/",
+    "sameAs": [
+      "https://dev.to/parshuram_singh",
+      "https://www.linkedin.com/in/parshuram-singh/",
+      "https://github.com/parshuramsingh"
+    ],
+    "jobTitle": "Software Engineer"
+  }
+  </script>
 </head>
 
   <body>
