added google site verification

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="google-site-verification" content="ApWhxT-TcoSV5A9nl-LuTCZEHQp_dtQqdtV1gUJDbZc" />
+
   <title>Parshuram Singh – React & Hyperledger Developer</title>
 
   <!-- ✅ Favicon -->
