--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="google-site-verification" content="ApWhxT-TcoSV5A9nl-LuTCZEHQp_dtQqdtV1gUJDbZc" />
 
-  <title>Parshuram Singh – React & Hyperledger Developer</title>
+  <title>Parshuram Singh | Blockchain & Frontend Developer</title>
 
   <!-- ✅ Favicon -->
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -13,7 +13,7 @@
   <!-- 🔍 SEO Meta -->
   <meta name="robots" content="index, follow" />
   <link rel="canonical" href="https://my-portfolio-eta-nine-d8gvqtsq67.vercel.app/" />
-  <meta name="description" content="Parshuram Singh ‑ Software Engineer specialising in React, Tailwind, Vite & Hyperledger Fabric; explore full‑stack dApp projects." />
+  <meta name="description" content="Parshuram Singh ‑ Blockchain Developer, Software Engineer specialising in React, Tailwind, Vite & Hyperledger Fabric; explore full‑stack dApp projects." />
   <meta name="author" content="Parshuram Singh" />
 
   <!-- 🧠 Open Graph -->
