chaged title to Software Engineer

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="google-site-verification" content="ApWhxT-TcoSV5A9nl-LuTCZEHQp_dtQqdtV1gUJDbZc" />
 
-  <title>Parshuram Singh | Blockchain & Frontend Developer</title>
+  <title>Parshuram Singh | Software Engineer</title>
 
   <!-- ✅ Favicon -->
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
